--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "react-spinners": "^0.14.1",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2"
   },
