--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-spinners": "^0.14.1",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "timeago.js": "^4.0.2"
   },
