--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^4.2.0",
     "axios": "^1.7.3",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
